# c-excercises

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
course3/homework-list/: CMakeLists.txt  benchmark.cc  linked-list.h  list-main.cc  list.h  test.cc  tests-of-list.cc  unit-test-runner.cc
course5/ack/: CMakeLists.txt  main.cc
course5/homework06/: CMakeLists.txt  homework06.cc  homework10.1.cc  main.cc  main.cpp  simple_string.cc  simple_string.h  string.cc  string.h  test.h  tuple_pretty_print.h  ustring.cc  ustring.h
course5/homework09/: CMakeLists.txt  data.txt  homework09-1.cc  homework09-2.cc  homework09.cc  unique_ptr.h
course5/homework10/: CMakeLists.txt  homework06.cc  homework10.cc  linked_list.cc  linked_list.h  linkedlist.hh  llist.h  main.cc  mystr.cc  mystr.h
course5/homework10/linked_list/: CMakeLists.txt  list.h  main.cc
course5/homework10/string_with_iterators/: CMakeLists.txt  main.cc  string.h
course5/homework11/: CMakeLists.txt  homework11.cc
course5/homework12/: CMakeLists.txt  comparers.cc  comparers.h  homework12.cc  line_sorter.cc  line_sorter.h  line_sorting.cc  line_sorting.h  main.cc  tests.cc  tests.cpp
course5/meeting11/: CMakeLists.txt  homework11.cc  meeting11.cc
course5/meeting17/: CMakeLists.txt  meeting17.cc  optmizations.cc
course6/toyapp/: CMakeLists.txt  main.cc
course6/toyapp-adam/: CMakeLists.txt  main.cc  scene.cc  scene.h
course6/toyapp-adam/displaylib/: CMakeLists.txt  camera.cc  camera.h  clock.cc  clock.h  color.h  cube.cc  cube.h  keyboard.cc  keyboard.h  matrix.cc  matrix.h  mesh.cc  mesh.h  mesh_util.cc  mesh_util.h  pixel.h  scene.cc  scene.h  sdlobject.cc  surface.cc  surface.h  surface_2d.cc  surface_2d.h  surface_3d.cc  surface_3d.h  transform.cc  transform.h  vector.cc  vector.h  window.cc  window.h
course6/toyapp-adam/math/: CMakeLists.txt  matrix.cc  matrix.h  transform.cc  transform.h  triangle.h  vector.cc  vector.h
course6/toyapp-adam/tesh_shapes/: cube.txt
course6/toyapp-adam/tests/: CMakeLists.txt  tests.cc
course6/toyapp-adam/tests/math/: vector_tests.cc
course6/toyapp-adam/tests/util/: unique_ptr_tests.cc
course6/toyapp-adam/util/: CMakeLists.txt  clock.cc  clock.h  keyboard.cc  keyboard.h  mouse.h  pixel.h  unique_ptr.h
course6/toyapp-mehrdad/displaylib/: CMakeLists.txt  functions.cc  functions.h  matrix.cc  matrix.h  shapes.cc  shapes.h  shapes2d.cc  shapes2d.h  shapes3d.cc  shapes3d.h  surface.cc  surface.h  types.h  vector2d.h  vector3d.cc  vector3d.h  window.cc  window.h
course6/toyapp-vivike/: CMakeLists.txt  main.cc  scene.cc  scene.h
course6/toyapp-vivike/displaylib/: CMakeLists.txt  keyboard.cc  keyboard.h  matrix.cc  matrix.h  mesh.cc  mesh.h  mesh_util.cc  mesh_util.h  objects.cc  objects.h  surface.cc  surface.h  surface3D.cc  surface3D.h  vector.cc  vector.h  window.cc  window.h
course6/toyapp-vivike/math/: CMakeLists.txt  transform.cc  transform.h
course6/toyapp-vivike/tests/: CMakeLists.txt  test_matrix.cc  test_objects.cc  test_vector.cc
course6/toyapp-vivike/util/: CMakeLists.txt  clock.cc  clock.h
course6/toyapp/displaylib/: CMakeLists.txt  cube.cc  cube.h  functions.cc  pixel.h  rgb.h  sdl.h  surface.cc  surface.h  vector.cc  vector.h  window.cc  window.h
course6/toyapp_alexs/displaylib/: CMakeLists.txt  color.cc  color.h  cube.cc  cube.h  functions.cc  matrix.cc  matrix.h  point2d.cc  point2d.h  point3d.cc  point3d.h  shape3d.cc  shape3d.h  surface.cc  surface.h  surface3d.cc  surface3d.h  transformation3d.cc  transformation3d.h  vector.h  vector2d.cc  vector2d.h  vector3d.cc  vector3d.h  window.cc  window.h
course6/toyapp_ariel/: CMakeLists.txt  main.cc
course6/toyapp_ariel/displaylib/: CMakeLists.txt  float3.cc  float3.h  float4.h  intersectioninfo.cc  intersectioninfo.h  mat4.cc  mat4.h  material.cc  material.h  primitive.cc  primitive.h  ray.cc  ray.h  renderingengine.cc  renderingengine.h  scene.cc  scene.h  sdlobject.h  sphere.cc  sphere.h  triangle.h  vector.h  window.cc
course6/toyapp_ariel/test/: CMakeLists.txt  unittests.cc
course6/toyapp_mikhail/displaylib/: CMakeLists.txt  cube.cc  cube.h  functions.cc  functions.h  matrix.h  pyramid.cc  pyramid.h  rgb.h  shape.cc  shape.h  surface.cc  surface.h  surface3d.cc  surface3d.h  triangle.cc  triangle.h  vector2d.cc  vector2d.h  vector3d.cc  vector3d.h  vector_common.cc  vector_common.h
course6/toyapp_thomasdhuys/drawlib/: CMakeLists.txt  color.cc  color.h  colors.h  drawer.cc  drawer.h  index.cc  index.h  matrix.cc  matrix.h  pixel.h  primitives.cc  primitives.h  projector.cc  projector.h  render_object.cc  render_object.h  renderer.cc  renderer.h  rgb.cc  rgb.h  scene.cc  scene.h  shape.cc  shape.h  vector.cc  vector.h  vector3d.cc  vector3d.h  vertex.cc  vertex.h
course7/homeworks/anton/dc/: CMakeLists.txt  complex.cc  complex.h  complex_stack.cc  complex_stack.h  main.cc  main.cc.autosave  my_linked_list.h  operation.h  operation_add.cc  operation_divide.cc  operation_multiply.cc  operation_substract.cc  parser.h  stack.h  tests.cc
course7/homeworks/fred/complex-rpn/: CMakeLists.txt  calculator.cc  calculator.h  complex.cc  complex.h  main.cc  operator.h  plugin.h  plugin_loader.cc  plugin_loader.h  utils.h
course7/homeworks/fred/complex-rpn/plugins/: CMakeLists.txt  (+1 more)
course7/homeworks/fred/ls/: CMakeLists.txt  main.cc
course7/homeworks/kushagra/: CMakeLists.txt  my_ls.cpp
course7/homeworks/kushagra/hw1/: my_ls.cpp
course7/homeworks/kushagra/hw2/: CMakeLists.txt  ls_hw2.cpp
course7/homeworks/mart/complex/: CMakeLists.txt  calculator.cc  calculator.hh  complex.cc  complex.hh  complex_linked_list.cc  complex_linked_list.hh  main.cc  test.cc
course7/homeworks/mathias/chat/: CMakeLists.txt  client.cpp  protocol.h  server.cpp  server.h
course7/homeworks/mathias/complex_rpn/: CMakeLists.txt  complex.cpp  complex.h  main.cpp  rpn_calculator.cpp  rpn_calculator.h
teabag/: CMakeLists.txt  debugger.cc  debugger.hh  debugger_state.cc  debugger_state.hh  ievent_sink.hh  json_sink.cc  main.cc  teabag.py  types.cc  types.hh
teabag/cpp/: json_sink.hh  main.cc  types.hh
(+572 files in other folders)
