set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_STANDARD 14)
#add_executable(homework09 homework09.cc)
add_executable(homework11 homework11.cc)
#add_executable(meeting09 meeting09.cc)
#target_link_libraries (homework09 benchmark pthread)
target_link_libraries (homework11 benchmark pthread)
